re PR c++/29470 (Using declaration access semantics change with templates)

PR c++/29470
        * pt.c (tsubst_decl) [USING_DECL]: Propagate access flags.

From-SVN: r143445